--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@
       </header>
 
       <!-- Navigation Menu -->
-      <div class="menu-items" style="font-size: large;">
+      <div class="menu-items">
         <a href="index.html" class="box" style="text-decoration: none; color: #697565;" >Home</a>
         <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
         <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
         <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">Contact</a>
+        <div class="search-bar">
+          <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input">
+          <button type="button" onclick="searchBlog()">
+            <img src="Search.png" alt="Search">
+          </button>
+        </div>
       </div>
     </div>
   </div>
