--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
         <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">Contact</a>
         <div class="search-bar">
-          <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input">
-          <button type="button" onclick="searchBlog()">
+          <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
+          <button type="button" id="search-button-large">
             <img src="Search.png" alt="Search">
           </button>
         </div>
@@ -63,8 +63,8 @@
     </div>
     <div class="page-title" id="page-title"> Home </div>
     <div class="search-bar">
-      <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input">
-      <button type="button" onclick="searchBlog()">
+      <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
+      <button type="button" id="search-button-small">
         <img src="Search.png" alt="Search">
       </button>
     </div>
