--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -55,11 +55,17 @@
         </header>
 
         <!-- Navigation Menu -->
-        <div class="menu-items" style="font-size: large;">
+        <div class="menu-items">
           <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
           <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
           <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color:  #697565;">Shower Thoughts</a>
           <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">Contact</a>
+          <div class="search-bar">
+            <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
+            <button type="button" id="search-button-large">
+              <img src="Search.png" alt="Search">
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -79,8 +85,8 @@
       </div>
       <div class="page-title" id="page-title"> Shower Thoughts </div>
       <div class="search-bar">
-        <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input">
-        <button type="button" onclick="searchBlog()">
+        <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
+        <button type="button" id="search-button-small">
           <img src="Search.png" alt="Search">
         </button>
       </div>
