--- a/Contact.html
+++ b/Contact.html
@@ -32,11 +32,17 @@
       </header>
 
       <!-- Navigation Menu -->
-      <div class="menu-items" style="font-size: large;">
+      <div class="menu-items">
         <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
         <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
         <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
         <a href="Contact.html" class="box" style="text-decoration: none; color:  #697565;">Contact</a>
+        <div class="search-bar">
+          <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
+          <button type="button" id="search-button-large">
+            <img src="Search.png" alt="Search">
+          </button>
+        </div>        
       </div>
     </div>
   </div>
@@ -56,8 +62,8 @@
     </div>
     <div class="page-title" id="page-title"> Contact </div>
     <div class="search-bar">
-      <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input">
-      <button type="button" onclick="searchBlog()">
+      <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
+      <button type="button" id="search-button-small">
         <img src="Search.png" alt="Search">
       </button>
     </div>
