--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </div>
   </div>
   <section class="hero-background">
+    <div class="parallax-image"></div>
     <div class="overlay-text">
       <h1>The Great Red Dragon</h1>
       <p>“And behold a great red dragon, having seven heads and ten horns, and seven crowns upon his heads.”</p>
