--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     <p>Proin tincidunt velit at nunc feugiat, vel volutpat dolor varius. Maecenas tincidunt vestibulum nibh.</p>
   </section>
   <script src="script.js"></script>
+    <button id="back-to-top" style="display: none;">
+    <img src="Up.png" alt="Back to Top">
+  </button>
 </body>
 </html>
 
