--- a/results.html
+++ b/results.html
@@ -73,7 +73,7 @@
     
           <!-- Navigation Menu -->
           <div class="menu-items">
-            <a href="index.html" class="box" style="text-decoration: none; color: #697565;" >Home</a>
+            <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
             <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
             <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
             <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">Contact</a>
