--- a/index.html
+++ b/index.html
@@ -77,13 +77,22 @@
   <section class="hero-background">
     <div class="parallax-image"></div>
     <div class="overlay-text">
+      <a href="The Great Red Dragon.html" style="text-decoration: none; color: inherit;">
       <h1>The Great Red Dragon</h1>
+      </a>
       <p>“And behold a great red dragon, having seven heads and ten horns, and seven crowns upon his heads.”</p>
     </div>
   </section>
+  <div class="break1">
+    <hr>
+  </div>
   <section class="blog-content">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor lacus ut odio luctus vehicula.</p>
-    <p>Proin tincidunt velit at nunc feugiat, vel volutpat dolor varius. Maecenas tincidunt vestibulum nibh.</p>
+    <h1>Introduction</h1>
+    <p>Cogito ergo sum. Je pense donc je suis. I think therefore I am. This would be the Cogito popularised by Descartes.  Here he makes an attempt at answering the fundamental question, “Who am I?”. Who am I indeed. This incessant question gnaws at the corners of our mind, begging for clarity from a silent, indifferent universe. Descartes’ Cogito serves as an attestation of humanity’s attempt at reasoning with the absurd. Was the uncovered “truth” satisfactory? Or do we have to question further? An answer to this is immediate, yet it eludes us, escapes us, and flees into oblivion. The universe is silent. Why are we here? What justifies our existence? These questions haunt us; they torment us. To paraphrase Descartes, we find ourselves in a whirlpool, tossed about, unable to swim to the top or touch the bottom with our feet.</p>
+
+    <p>And yet, the search itself is not devoid of meaning. Out from the pithos ran rampant despair, negation, and alienation, yet something stayed with us. Something truly human. Hope. Hope retains an air of waywardness: a true embodiment of our rebellion. The Sisyphean struggle which elucidates this futile tug of war against the desolate silence of a meaningless universe. Perhaps the questions matter more than the answers. Perhaps the act of questioning is what makes us human. Perhaps an “I” would never be found in the depths of this infinite regression. </p>
+    
+    <p>I leave you something that may or may not persist beyond my time. A collection of ideas and thoughts encapsulating the human experience. My experience. The questions I thus ask cannot be unasked. Dear reader, you have been warned—stare into the basilisk only if you dare. This would be an effort at trying to grapple with reality itself, a means of finding solace in an absurdist creation, affirming the meaningless and loving one’s fate. Between absolute negation and the absurdist’s wager, I choose the latter. I hope my reasons will be apparent with every iterative essay and work I hence publish. Let us question everything and see where that leads. I give you only questions, not answers. The intention is to explore various facets of what makes humans, human. One must first exist to ask the questions. We have achieved the first task in the syllogism. Now, we shall ask the questions that follow. </p>
   </section>
   <script src="script.js"></script>
   <button id="back-to-top" style="display: none;">
