--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
     
     <p>I leave you something that may or may not persist beyond my time. A collection of ideas and thoughts encapsulating the human experience. My experience. The questions I thus ask cannot be unasked. Dear reader, you have been warned—stare into the basilisk only if you dare. This would be an effort at trying to grapple with reality itself, a means of finding solace in an absurdist creation, affirming the meaningless and loving one’s fate. Between absolute negation and the absurdist’s wager, I choose the latter. I hope my reasons will be apparent with every iterative essay and work I hence publish. Let us question everything and see where that leads. I give you only questions, not answers. The intention is to explore various facets of what makes humans, human. One must first exist to ask the questions. We have achieved the first task in the syllogism. Now, we shall ask the questions that follow. </p>
   </section>
+  <div class="break1" style="padding-top: 50px;">
+    <hr>
+  </div>
+  <section class="blog-content">
+    <h1>Recent Posts</h1>
+    <ul class="recent-post-list">
+      <li>
+        <a href="The Great Red Dragon.html" class="recent-post-link">The Great Red Dragon</a>
+      </li>
+      <li>
+        <a href="Determinism.html" class="recent-post-link">The Illusion of Free Will</a>
+      </li>
+    </ul>
+  </section>
   <script src="script.js"></script>
   <button id="back-to-top" style="display: none;">
     <img src="Up.png" alt="Back to Top">
