--- a/results.html
+++ b/results.html
@@ -114,7 +114,9 @@
           <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Contact</a>
         </div>
       </div>
-
+      <div class="section-title">
+        <h1>Oracle's Insights</h1>
+      </div>
   <!-- Results -->
     <div class="results">
     <main>
