--- a/index.html
+++ b/index.html
@@ -101,10 +101,7 @@
     <h1>Recent Posts</h1>
     <ul class="recent-post-list">
       <li>
-        <a href="The Great Red Dragon.html" class="recent-post-link">The Great Red Dragon</a>
-      </li>
-      <li>
-        <a href="Determinism.html" class="recent-post-link">The Illusion of Free Will</a>
+        <a href="Process of inquiry.html" class="recent-post-link">The Process of Inquiry</a>
       </li>
     </ul>
   </section>
