--- a/Process of inquiry.html
+++ b/Process of inquiry.html
@@ -101,7 +101,7 @@
           <span class="line"></span>
           <span class="line"></span>
         </div>
-        <div class="page-title" id="page-title">Free Will</div>
+        <div class="page-title" id="page-title">Inquiry</div>
         <div class="search-bar">
           <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
           <button type="button" id="search-button-small">
