New Report and a half updated contact page

--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
         <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
         <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
         <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
-        <a href="Contact.html" class="box" style="text-decoration: none; color:  #697565;">Contact</a>
+        <a href="Contact.html" class="box" style="text-decoration: none; color:  #697565;">The Study</a>
         <div class="search-bar">
           <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
           <button type="button" id="search-button-large">
@@ -60,7 +60,7 @@
       <span class="line"></span>
       <span class="line"></span>
     </div>
-    <div class="page-title" id="page-title"> Contact </div>
+    <div class="page-title" id="page-title"> The Study </div>
     <div class="search-bar">
       <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
       <button type="button" id="search-button-small">
@@ -73,8 +73,21 @@
       <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Shower Thoughts</a>
     </div>
   </div>
+    <div class="section-title">
+        <h1>Meet the Creator</h1>
+    </div>
   <section class="blog-content">
-    <p>Coming Soon...</p>
+    <div class="propic">
+      <div class="profile-pic">
+        <img src="propic.png">
+      </div>
+    </div>
+    <p class="greeting-text">
+      <strong>Greetings, weary surfer of the web.</strong>
+    </p>
+    <p>
+      Within the pages of my blog you will find an ever changing archive of my curiosities--a space borne of thought where I publish thoughts and creations stemming from subjects that captivate me. This space is devoid of the shackles of genre but is only a procession of essays, passages, reports, reflections, and poems--each a thread in the tapestry of my never ending inquiry. A sort of Camusian process. As I am subjected to change in this realm of impermanence, so is this blog ever in flux, never being fully complete. You are warmly invited to ponder the matters under discourse here, and should any thought arise, it would be my privilege to receive your reflections. A link for correspondence lies below. Till then, I bid you an insightful day.
+    </p>  
   </section>
   <script src="script.js"></script>
 </body>
