--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Noble Homer's Blog</title>
 </head>
 <body>
@@ -36,7 +37,7 @@
         <a href="index.html" class="box" style="text-decoration: none; color: #697565;" >Home</a>
         <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
         <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
-        <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">Contact</a>
+        <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
         <div class="search-bar">
           <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
           <button type="button" id="search-button-large">
@@ -71,7 +72,7 @@
     <div class="menu-items-vertical" id="menu-items-vertical">
       <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Essays</a>
       <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Shower Thoughts</a>
-      <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Contact</a>
+      <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
     </div>
   </div>
   <section class="hero-background">
@@ -102,6 +103,9 @@
     <ul class="recent-post-list">
       <li>
         <a href="Process of inquiry.html" class="recent-post-link">The Process of Inquiry</a>
+      </li>
+      <li>
+        <a href="Univariate Linear Regression.html" class="recent-post-link">A First Principles Approach to Univariate Linear Regression</a>
       </li>
     </ul>
   </section>
