--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -59,7 +59,7 @@
           <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
           <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
           <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color:  #697565;">Shower Thoughts</a>
-          <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">Contact</a>
+          <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
           <div class="search-bar">
             <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
             <button type="button" id="search-button-large">
@@ -93,7 +93,7 @@
       <div class="menu-items-vertical" id="menu-items-vertical">
         <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Home</a>
         <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Essays</a>
-        <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Contact</a>
+        <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
       </div>
     </div>
   </div>
