Stylistic adjustments made to the links to articles on home page

--- a/Univariate Linear Regression.html
+++ b/Univariate Linear Regression.html
@@ -343,11 +343,11 @@ f\left(x^{(i)}\right) = w x^{(i)} + b, \quad i = 1, 2, \dots, m
             References
         </h1>
         <div class="references">
-            <p>[1] Salary Prediction Data – Simple Linear Regression, Krishna Raj, Kaggle dataset. <a href="https://www.kaggle.com/datasets/krishnaraj30/salary-prediction-data-simple-linear-regression">https://www.kaggle.com/datasets/krishnaraj30/salary-prediction-data-simple-linear-regression</a></p>
-            <p>[2] Ng, A. (n.d.). Machine Learning Specialization. Coursera. <a href=" https://www.coursera.org/specializations/machine-learning-introduction">https://www.coursera.org/specializations/machine-learning-introduction</a></p>
-            <p>[3] Python Software Foundation. Python Language Reference. <a href= "https://www.python.org">https://www.python.org</a></p>
-            <p>[4] NumPy Developers. (n.d.). NumPy v1.26 Manual. <a href="https://numpy.org/doc/">https://numpy.org/doc/</a></p>
-            <p>[5] Chandrawansa, M. (2025). Univariate Linear Regression from First Principles [Source code]. GitHub. <a href="https://github.com/miniduofficial/univariate-linear-regression">https://github.com/miniduofficial/univariate-linear-regression </a></p>
+            <p>[1] Salary Prediction Data – Simple Linear Regression, Krishna Raj, Kaggle dataset. <a href="https://www.kaggle.com/datasets/krishnaraj30/salary-prediction-data-simple-linear-regression" class="link">https://www.kaggle.com/datasets/krishnaraj30/salary-prediction-data-simple-linear-regression</a></p>
+            <p>[2] Ng, A. (n.d.). Machine Learning Specialization. Coursera. <a href=" https://www.coursera.org/specializations/machine-learning-introduction" class="link">https://www.coursera.org/specializations/machine-learning-introduction</a></p>
+            <p>[3] Python Software Foundation. Python Language Reference. <a href= "https://www.python.org" class="link">https://www.python.org</a></p>
+            <p>[4] NumPy Developers. (n.d.). NumPy v1.26 Manual. <a href="https://numpy.org/doc/" class="link">https://numpy.org/doc/</a></p>
+            <p>[5] Chandrawansa, M. (2025). Univariate Linear Regression from First Principles [Source code]. GitHub. <a href="https://github.com/miniduofficial/univariate-linear-regression" class="link">https://github.com/miniduofficial/univariate-linear-regression </a></p>
         </div>
     </div>
     <button id="back-to-top" style="display: none;">
