Changed JS logic and did some minor adjustments

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
   <title>Noble Homer's Blog</title>
 </head>
 <body>
-  <div id="loading-screen">
+    <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
     <div class="loading-symbol">
       <img src="Skull.gif" alt="Loading Icon">
     </div>
