--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Noble Homer's Blog</title>
 </head>
 <body>
-  <div id="loading-screen">
+  <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
     <div class="loading-symbol">
       <img src="Skull.gif" alt="Loading Icon">
     </div>
@@ -21,7 +21,7 @@
     <div class="main-box" style="width: 200px; height: 200px; padding: 0%;">
       <a href="index.html">
         <div class="logo">
-        <img src="logo1.png" alt="Logo" style="width: 100%; height: 100%; object-fit: cover;">
+        <img class="progressive-img" src="logo1-low.png" data-preview="logo1-low.png" data-src="logo1.png" alt="Logo" style="width: 100%; height:100%; object-fit: cover;">
         </div>
       </a>
     </div>
@@ -50,7 +50,11 @@
   <div class="main-box2">
     <a href="index.html">
       <div class="logo2">
-      <img src="logo1.png" alt="Logo">
+      <img class="progressive-img"
+     src="logo1-low.png"
+     data-preview="logo1-low.png"
+     data-src="logo1.png"
+     alt="Logo">
       </div>
     </a>
   </div>
@@ -76,7 +80,7 @@
     </div>
   </div>
   <section class="hero-background">
-    <div class="parallax-image"></div>
+    <div class="parallax-image progressive-bg"  data-preview="The Great Red Dragon 1-low.jpg"  data-src="The Great Red Dragon 1.jpg"></div>
     <div class="overlay-text">
       <a href="The Great Red Dragon.html" style="text-decoration: none; color: inherit;">
       <h1>The Great Red Dragon</h1>
