--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -8,93 +8,94 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <title>Noble Homer's Blog</title>
   <style>
-    @media (max-width:880px) {
+    @media (max-width:700px) {
       .page-title{
-        font-size: 0.9em;
-        margin-left: -5%;
-      }
 
-      .search-bar{
         font-size: 0.8em;
       }
-      .search-bar input{
-        width: 18vh;
+      .box2{
+        height: 0.4vh;
+        min-height: 5px;
+        line-height: 0.2;
       }
     }
     @media (max-width:428px) {
       .page-title{
-        font-size: 0.55em;
+        font-size: 0.5em;
         padding-left: 0px;
         margin-left: -12%;
+      }
+      .box2{
+        height: 0.4vh;
+        min-height: 5px;
+        line-height: 0.2;
       }
     }
   </style>
 </head>
 <body>
-  <div class="content-wrapper">
-    <div id="loading-screen">
-      <div class="loading-symbol">
-        <img src="Skull.gif" alt="Loading Icon">
-      </div>
-      <p id="quote-display" class="loading-text">Loading...</p>
+    <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
+    <div class="loading-symbol">
+      <img src="Skull.gif" alt="Loading Icon">
     </div>
-    <div class="main-grid">
-      <!-- Logo Section -->
-      <div class="main-box" style="width: 200px; height: 200px; overflow: hidden; padding: 0%;">
-        <a href="index.html">
-          <div class="logo">
-          <img src="logo1.png" alt="Logo" style="width: 100%; height: 100%; object-fit: cover;">
-          </div>
-        </a>
-      </div>
-
-      <!-- Blog Title and Navigation -->
-      <div class="main-box" style="padding-top: 10px; font-size: 200%;">
-        <header class="main-box" style="padding-top: 0px; font-size: 100%;">
-          <div class="title">Noble Homer's Blog</div>
-        </header>
-
-        <!-- Navigation Menu -->
-        <div class="menu-items">
-          <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
-          <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
-          <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color:  #697565;">Shower Thoughts</a>
-          <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
-          <div class="search-bar">
-            <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
-            <button type="button" id="search-button-large">
-              <img src="Search.png" alt="Search">
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="main-box2">
+    <p id="quote-display" class="loading-text">Loading...</p>
+  </div>
+  <div class="main-grid">
+    <!-- Logo Section -->
+    <div class="main-box" style="width: 200px; height: 200px; overflow: hidden; padding: 0%;">
       <a href="index.html">
-        <div class="logo2">
-        <img src="logo1.png" alt="Logo">
+        <div class="logo">
+        <img src="logo1.png" alt="Logo" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
       </a>
     </div>
-    <!-- Hamburger Menu -->
-    <div class="menu-title-wrapper">
-      <div class="menu-toggle">
-        <span class="line"></span>
-        <span class="line"></span>
-        <span class="line"></span>
+
+    <!-- Blog Title and Navigation -->
+    <div class="main-box" style="padding-top: 10px; font-size: 200%;">
+      <header class="main-box" style="padding-top: 0px; font-size: 100%;">
+        <div class="title">Noble Homer's Blog</div>
+      </header>
+
+      <!-- Navigation Menu -->
+      <div class="menu-items">
+        <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
+        <a href="Essays.html" class="box" style="text-decoration: none; color:inherit">Essays</a>
+        <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color:   #697565;">Shower Thoughts</a>
+        <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
+        <div class="search-bar">
+          <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
+          <button type="button" id="search-button-large">
+            <img src="Search.png" alt="Search">
+          </button>
+        </div>        
       </div>
-      <div class="page-title" id="page-title"> Shower Thoughts </div>
-      <div class="search-bar">
-        <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
-        <button type="button" id="search-button-small">
-          <img src="Search.png" alt="Search">
-        </button>
+    </div>
+  </div>
+  <div class="main-box2">
+    <a href="index.html">
+      <div class="logo2">
+      <img src="logo1.png" alt="Logo">
       </div>
-      <div class="menu-items-vertical" id="menu-items-vertical">
-        <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Home</a>
-        <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Essays</a>
-        <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
-      </div>
+    </a>
+  </div>
+  <!-- Hamburger Menu -->
+  <div class="menu-title-wrapper">
+    <div class="menu-toggle">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </div>
+    <div class="page-title" id="page-title"> Shower Thoughts </div>
+    <div class="search-bar">
+      <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
+      <button type="button" id="search-button-small">
+        <img src="Search.png" alt="Search">
+      </button>
+    </div>
+    <div class="menu-items-vertical" id="menu-items-vertical">
+      <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Home</a>
+      <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Essays</a>
+      <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
     </div>
   </div>
   <section class="blog-content">
