--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-    <div id="loading-screen">
+      <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
         <div class="loading-symbol">
           <img src="Skull.gif" alt="Loading Icon">
         </div>
