Name updates and addition of content

--- a/Process of inquiry.html
+++ b/Process of inquiry.html
@@ -74,9 +74,9 @@
     
           <!-- Navigation Menu -->
           <div class="menu-items">
-            <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
-            <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
-            <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
+            <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Epicentre</a>
+            <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Articulations</a>
+            <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Fragments</a>
             <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
             <div class="search-bar">
               <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
@@ -109,9 +109,9 @@
           </button>
         </div>
         <div class="menu-items-vertical" id="menu-items-vertical">
-          <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Home</a>
-          <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Essays</a>
-          <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Shower Thoughts</a>
+          <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Epicentre</a>
+          <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Articulations</a>
+          <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Fragments</a>
           <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
         </div>
       </div>
