--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
       <!-- Navigation Menu -->
       <div class="menu-items">
-        <a href="index.html" class="box" style="text-decoration: none; color: #697565;" >Home</a>
-        <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Essays</a>
-        <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
+        <a href="index.html" class="box" style="text-decoration: none; color: #697565;" >Epicentre</a>
+        <a href="Essays.html" class="box" style="text-decoration: none; color: inherit;">Articulations</a>
+        <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Fragments</a>
         <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
         <div class="search-bar">
           <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
@@ -66,7 +66,7 @@
       <span class="line"></span>
       <span class="line"></span>
     </div>
-    <div class="page-title" id="page-title"> Home </div>
+    <div class="page-title" id="page-title"> Epicentre </div>
     <div class="search-bar">
       <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
       <button type="button" id="search-button-small">
@@ -74,8 +74,8 @@
       </button>
     </div>
     <div class="menu-items-vertical" id="menu-items-vertical">
-      <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Essays</a>
-      <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Shower Thoughts</a>
+      <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Articulations</a>
+      <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Fragments</a>
       <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
     </div>
   </div>
