--- a/Essays.html
+++ b/Essays.html
@@ -33,9 +33,9 @@
 
       <!-- Navigation Menu -->
       <div class="menu-items">
-        <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
-        <a href="Essays.html" class="box" style="text-decoration: none; color:  #697565;">Essays</a>
-        <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Shower Thoughts</a>
+        <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Epicentre</a>
+        <a href="Essays.html" class="box" style="text-decoration: none; color:  #697565;">Articulations</a>
+        <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color: inherit;">Fragments</a>
         <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
         <div class="search-bar">
           <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
@@ -60,7 +60,7 @@
       <span class="line"></span>
       <span class="line"></span>
     </div>
-    <div class="page-title" id="page-title"> Essays </div>
+    <div class="page-title" id="page-title"> Articulations </div>
     <div class="search-bar">
       <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
       <button type="button" id="search-button-small">
@@ -68,8 +68,8 @@
       </button>
     </div>
     <div class="menu-items-vertical" id="menu-items-vertical">
-      <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Home</a>
-      <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Shower Thoughts</a>
+      <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Epicentre</a>
+      <a href="Shower Thoughts.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Fragments</a>
       <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
     </div>
   </div>
