--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -58,9 +58,9 @@
 
       <!-- Navigation Menu -->
       <div class="menu-items">
-        <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Home</a>
-        <a href="Essays.html" class="box" style="text-decoration: none; color:inherit">Essays</a>
-        <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color:   #697565;">Shower Thoughts</a>
+        <a href="index.html" class="box" style="text-decoration: none; color: inherit;" >Epicentre</a>
+        <a href="Essays.html" class="box" style="text-decoration: none; color:inherit">Articulations</a>
+        <a href="Shower Thoughts.html" class="box" style="text-decoration: none; color:   #697565;">Fragments</a>
         <a href="Contact.html" class="box" style="text-decoration: none; color: inherit;">The Study</a>
         <div class="search-bar">
           <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-large">
@@ -85,7 +85,7 @@
       <span class="line"></span>
       <span class="line"></span>
     </div>
-    <div class="page-title" id="page-title"> Shower Thoughts </div>
+    <div class="page-title" id="page-title"> Fragments </div>
     <div class="search-bar">
       <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
       <button type="button" id="search-button-small">
@@ -93,13 +93,18 @@
       </button>
     </div>
     <div class="menu-items-vertical" id="menu-items-vertical">
-      <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Home</a>
-      <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Essays</a>
+      <a href="index.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Epicentre</a>
+      <a href="Essays.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">Articulations</a>
       <a href="Contact.html" class="box2" style="text-decoration: none; color: inherit; font-size: 0.7em;">The Study</a>
     </div>
   </div>
   <section class="blog-content">
-    <p>Coming Soon...</p>
+    <h1>Prologue</h1>
+    <p>	Below lies a collection of my ideas—nascent in origin—listed under their rightful sections. It would be difficult to refer to it as anything other than "Fragments" as it truly is just that. Fragments of my soul, unfinished at times, all an attestation to the person I am. Expressions, contemplations, and analyses—each reflecting a facet of my being. To be candid, the topics contained here and even the forms of expression are not of one brood, but born of varied genres and moods. Since I gravitate heavily towards the world views of Camus, one could call this a sort of proliferation of intellectual tastes. I hope you find this enticing and thought provoking. </p>
+    <h1>Simmering Conceptions</h1>
+    <ul class="fragments-list">
+      <li><a href="Process of inquiry.html" class="recent-post-link">Nascent ponderings</a></li>
+    </ul>
   </section>
   <script src="script.js"></script>
 </body>
