Modified Essays and Added footer

--- a/Essays.html
+++ b/Essays.html
@@ -9,6 +9,8 @@
   <title>Noble Homer's Blog</title>
 </head>
 <body>
+<div class="page-wrapper">
+  <main>
     <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
     <div class="loading-symbol">
       <img src="Skull.gif" alt="Loading Icon">
@@ -74,8 +76,29 @@
     </div>
   </div>
   <section class="blog-content">
-    <p>Coming Soon...</p>
+    <h1>Foreword</h1>
+    <p>	Here, I present works shaped by deliberate articulation and contemplative design—each brought to a semblance of completion. As is the case with all content on this blog, it too lacks a strict thematic design, instead drawing from disparate domains. This modest corner within my blog—my brainchild—is thus reserved for such works that may quench your thirst for arcane yet meaningful inquiry, though pieces of a more colloquial nature will also find refuge here.</p>
+    <div class="break1">
+      <hr>
+    </div>
+    <h1>Rendered Conceptions</h1>
+    <ul class="fragments-list">
+      <li><a href="Univariate Linear Regression.html" class="recent-post-link">Cavorting with Univariate Linear Regression</a></li>
+    </ul>
   </section>
+  </main>
   <script src="script.js"></script>
+  <footer class="site-footer">
+  <div class="footer-container">
+    <nav class="footer-nav">
+      <a href="index.html">Epicentre</a>
+      <a href="Essays.html">Articulations</a>
+      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="Contact.html">The Study</a>
+    </nav>
+    <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
+  </div>
+</footer>
+</div>
 </body>
 </html>
