--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -34,6 +34,8 @@
   </style>
 </head>
 <body>
+  <div class="page-wrapper">
+    <main>
     <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
     <div class="loading-symbol">
       <img src="Skull.gif" alt="Loading Icon">
@@ -101,11 +103,27 @@
   <section class="blog-content">
     <h1>Prologue</h1>
     <p>	Below lies a collection of my ideas—nascent in origin—listed under their rightful sections. It would be difficult to refer to it as anything other than "Fragments" as it truly is just that. Fragments of my soul, unfinished at times, all an attestation to the person I am. Expressions, contemplations, and analyses—each reflecting a facet of my being. To be candid, the topics contained here and even the forms of expression are not of one brood, but born of varied genres and moods. Since I gravitate heavily towards the world views of Camus, one could call this a sort of proliferation of intellectual tastes. I hope you find this enticing and thought provoking. </p>
+  <div class="break1">
+    <hr>
+  </div>
     <h1>Simmering Conceptions</h1>
     <ul class="fragments-list">
       <li><a href="Process of inquiry.html" class="recent-post-link">Nascent ponderings</a></li>
     </ul>
   </section>
+  </main>
+  <footer class="site-footer">
+  <div class="footer-container">
+    <nav class="footer-nav">
+      <a href="index.html">Epicentre</a>
+      <a href="Essays.html">Articulations</a>
+      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="Contact.html">The Study</a>
+    </nav>
+    <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
+  </div>
+</footer>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
