--- a/Univariate Linear Regression.html
+++ b/Univariate Linear Regression.html
@@ -95,6 +95,8 @@
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
 </head>
 <body>
+  <div class="page-wrapper">
+    <main>
       <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
         <div class="loading-symbol">
           <img src="Skull.gif" alt="Loading Icon">
@@ -378,7 +380,7 @@ f\left(x^{(i)}\right) = w x^{(i)} + b, \quad i = 1, 2, \dots, m
         <h1>
             References
         </h1>
-        <div class="references">
+        <div class="references" style="padding-bottom: 10%;">
             <p>[1] Salary Prediction Data – Simple Linear Regression, Krishna Raj, Kaggle dataset. <a href="https://www.kaggle.com/datasets/krishnaraj30/salary-prediction-data-simple-linear-regression" class="link">https://www.kaggle.com/datasets/krishnaraj30/salary-prediction-data-simple-linear-regression</a></p>
             <p>[2] Ng, A. (n.d.). Machine Learning Specialization. Coursera. <a href=" https://www.coursera.org/specializations/machine-learning-introduction" class="link">https://www.coursera.org/specializations/machine-learning-introduction</a></p>
             <p>[3] Python Software Foundation. Python Language Reference. <a href= "https://www.python.org" class="link">https://www.python.org</a></p>
@@ -389,5 +391,18 @@ f\left(x^{(i)}\right) = w x^{(i)} + b, \quad i = 1, 2, \dots, m
     <button id="back-to-top" style="display: none;">
         <img src="Up.png" alt="Back to Top">
     </button>
-</body>
+  </main>
+    <footer class="site-footer">
+  <div class="footer-container">
+    <nav class="footer-nav">
+      <a href="index.html">Epicentre</a>
+      <a href="Essays.html">Articulations</a>
+      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="Contact.html">The Study</a>
+    </nav>
+    <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
+  </div>
+</footer>
+  </div>
+  </body>
 </html>
