--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Noble Homer's Blog</title>
 </head>
 <body>
+  <div class="page-wrapper">
   <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
     <div class="loading-symbol">
       <img src="Skull.gif" alt="Loading Icon">
@@ -102,7 +103,7 @@
   <div class="break1" style="padding-top: 50px;">
     <hr>
   </div>
-  <section class="blog-content">
+  <section class="blog-content" style="padding-bottom: 20%;">
     <h1>Recent Posts</h1>
     <ul class="recent-post-list">
       <li>
@@ -117,6 +118,18 @@
   <button id="back-to-top" style="display: none;">
     <img src="Up.png" alt="Back to Top">
   </button>
+  <footer class="site-footer">
+  <div class="footer-container">
+    <nav class="footer-nav">
+      <a href="index.html">Epicentre</a>
+      <a href="Essays.html">Articulations</a>
+      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="Contact.html">The Study</a>
+    </nav>
+    <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
+  </div>
+</footer>
+</div>
 </body>
 </html>
 
