--- a/Contact.html
+++ b/Contact.html
@@ -9,6 +9,8 @@
   <title>Noble Homer's Blog</title>
 </head>
 <body>
+  <main>
+  <div class="page-wrapper">
     <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
     <div class="loading-symbol">
       <img src="Skull.gif" alt="Loading Icon">
@@ -93,6 +95,19 @@
     </div>
     </div>
   </section>
+  </main>
   <script src="script.js"></script>
+  <footer class="site-footer">
+  <div class="footer-container">
+    <nav class="footer-nav">
+      <a href="index.html">Epicentre</a>
+      <a href="Essays.html">Articulations</a>
+      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="Contact.html">The Study</a>
+    </nav>
+    <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
+  </div>
+</footer>
+</div>
 </body>
 </html>
