--- a/Determinism.html
+++ b/Determinism.html
@@ -50,6 +50,8 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class="page-wrapper">
       <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
         <div class="loading-symbol">
           <img src="Skull.gif" alt="Loading Icon">
@@ -122,5 +124,18 @@
     <button id="back-to-top" style="display: none;">
         <img src="Up.png" alt="Back to Top">
     </button>
+  </main>
+    <footer class="site-footer">
+  <div class="footer-container">
+    <nav class="footer-nav">
+      <a href="index.html">Epicentre</a>
+      <a href="Essays.html">Articulations</a>
+      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="Contact.html">The Study</a>
+    </nav>
+    <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
+  </div>
+</footer>
+    </div>
 </body>
 </html>
