--- a/results.html
+++ b/results.html
@@ -49,6 +49,8 @@
   </style>
 </head>
 <body>
+  <div class="page-wrapper">
+    <main>
       <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
         <div class="loading-symbol">
           <img src="Skull.gif" alt="Loading Icon">
@@ -127,5 +129,18 @@
     </div>
     <script src="results.js"></script>
     <script src="script.js"></script>
+    </main>
+      <footer class="site-footer">
+  <div class="footer-container">
+    <nav class="footer-nav">
+      <a href="index.html">Epicentre</a>
+      <a href="Essays.html">Articulations</a>
+      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="Contact.html">The Study</a>
+    </nav>
+    <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
+  </div>
+</footer>
+  </div>
 </body>
 </html>
