--- a/Contact.html
+++ b/Contact.html
@@ -90,7 +90,7 @@
       <strong>Greetings, weary surfer of the web.</strong>
     </p>
     <p>
-      Within the pages of my blog you will find an ever changing archive of my curiosities--a space borne of thought where I publish thoughts and creations stemming from subjects that captivate me. This space is devoid of the shackles of genre but is only a procession of essays, passages, reports, reflections, and poems--each a thread in the tapestry of my never ending inquiry. A sort of Camusian process. As I am subjected to change in this realm of impermanence, so is this blog ever in flux, never being fully complete. You are warmly invited to ponder the matters under discourse here, and should any thought arise, it would be my privilege to receive your reflections. A link for correspondence lies below. Till then, I bid you an insightful day.
+      Within the pages of my blog you will find an ever changing archive of my curiosities--a space borne of thought where I publish thoughts and creations stemming from subjects that captivate me. This space is devoid of the shackles of genre but is only a procession of essays, passages, reports, reflections, and poems--each a thread in the tapestry of my never ending inquiry. A sort of Camusian process. As I am subjected to change in this realm of impermanence, so is this blog ever in flux, never being fully complete. You are warmly invited to ponder the matters under discourse here. I bid you an insightful day.
     </p>  
     </div>
     </div>
