Made an attempt at fixing the search bar

--- a/results.html
+++ b/results.html
@@ -50,7 +50,6 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <main>
       <div id="loading-screen"  class="progressive-bg"  data-preview="Landscape-low.jpg"  data-src="Landscape.jpeg">
         <div class="loading-symbol">
           <img src="Skull.gif" alt="Loading Icon">
@@ -127,9 +126,6 @@
         </div>
     </main>
     </div>
-    <script src="results.js"></script>
-    <script src="script.js"></script>
-    </main>
       <footer class="site-footer">
   <div class="footer-container">
     <nav class="footer-nav">
@@ -142,5 +138,8 @@
   </div>
 </footer>
   </div>
+<script defer src="https://unpkg.com/minisearch@6.3.0/dist/umd/index.min.js"></script>
+<script defer src="./results.minisearch.js"></script>
+<script defer src="./script.js"></script>
 </body>
 </html>
