Made some minor changes

--- a/The Great Red Dragon.html
+++ b/The Great Red Dragon.html
@@ -121,6 +121,9 @@
     <div class="section-title">
         <h1>The Great Red Dragon</h1>
     </div>
+    <div class="blog-content">
+      <p>A work in progress. Please await completion...</p>
+    </div>
     <button id="back-to-top" style="display: none;">
         <img src="Up.png" alt="Back to Top">
     </button>
