Stylistic changes to the footer

--- a/Process of inquiry.html
+++ b/Process of inquiry.html
@@ -136,9 +136,9 @@
       <footer class="site-footer">
   <div class="footer-container">
     <nav class="footer-nav">
-      <a href="index.html">Epicentre</a>
-      <a href="Essays.html">Articulations</a>
-      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="index.html">Epicentre</a>&nbsp;&middot;&nbsp;
+      <a href="Essays.html">Articulations</a>&nbsp;&middot;&nbsp;
+      <a href="Shower Thoughts.html">Fragments</a>&nbsp;&middot;&nbsp;
       <a href="Contact.html">The Study</a>
     </nav>
     <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
