--- a/Univariate Linear Regression.html
+++ b/Univariate Linear Regression.html
@@ -395,9 +395,9 @@ f\left(x^{(i)}\right) = w x^{(i)} + b, \quad i = 1, 2, \dots, m
     <footer class="site-footer">
   <div class="footer-container">
     <nav class="footer-nav">
-      <a href="index.html">Epicentre</a>
-      <a href="Essays.html">Articulations</a>
-      <a href="Shower Thoughts.html">Fragments</a>
+      <a href="index.html">Epicentre</a>&nbsp;&middot;&nbsp;
+      <a href="Essays.html">Articulations</a>&nbsp;&middot;&nbsp;
+      <a href="Shower Thoughts.html">Fragments</a>&nbsp;&middot;&nbsp;
       <a href="Contact.html">The Study</a>
     </nav>
     <p class="footer-credit">© 2025 Minidu Chandrawansa</p>
